# telegram_categorization_2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp  predictor.h  problems.txt  tfidf_vectorizer.cc
config/: predict.conf
data/category_en/: output.txt
data/category_ru/: output.txt  tg_output.txt
model/: lightgbm_model_ru_0.txt  lightgbm_model_ru_1.txt  lightgbm_model_ru_10.txt  lightgbm_model_ru_11.txt  lightgbm_model_ru_12.txt  lightgbm_model_ru_13.txt  lightgbm_model_ru_14.txt  lightgbm_model_ru_15.txt  lightgbm_model_ru_16.txt  lightgbm_model_ru_17.txt  lightgbm_model_ru_18.txt  lightgbm_model_ru_19.txt  lightgbm_model_ru_2.txt  lightgbm_model_ru_20.txt  lightgbm_model_ru_21.txt  lightgbm_model_ru_22.txt  lightgbm_model_ru_23.txt  lightgbm_model_ru_24.txt  lightgbm_model_ru_25.txt  lightgbm_model_ru_26.txt  lightgbm_model_ru_27.txt  lightgbm_model_ru_28.txt  lightgbm_model_ru_29.txt  lightgbm_model_ru_3.txt  lightgbm_model_ru_30.txt  lightgbm_model_ru_31.txt  lightgbm_model_ru_32.txt  lightgbm_model_ru_33.txt  lightgbm_model_ru_34.txt  lightgbm_model_ru_35.txt  lightgbm_model_ru_36.txt  lightgbm_model_ru_37.txt  lightgbm_model_ru_38.txt  lightgbm_model_ru_39.txt  lightgbm_model_ru_4.txt  lightgbm_model_ru_40.txt  lightgbm_model_ru_5.txt  lightgbm_model_ru_6.txt  lightgbm_model_ru_7.txt  lightgbm_model_ru_8.txt  (+1 more)
model/tfidf/: tfidf_idf.csv  tfidf_vocabulary.csv
models/en/: lightgbm_model_10.txt  lightgbm_model_11.txt  lightgbm_model_12.txt  lightgbm_model_14.txt  lightgbm_model_19.txt  lightgbm_model_21.txt  lightgbm_model_22.txt  lightgbm_model_23.txt  lightgbm_model_26.txt  lightgbm_model_28.txt  lightgbm_model_29.txt  lightgbm_model_3.txt  lightgbm_model_30.txt  lightgbm_model_31.txt  lightgbm_model_32.txt  lightgbm_model_36.txt  lightgbm_model_37.txt  lightgbm_model_39.txt  lightgbm_model_6.txt  lightgbm_model_7.txt  lightgbm_model_8.txt
models/en/tfidf/: tfidf_idf.csv  tfidf_vocabulary.csv
models/ru/: lightgbm_model_0.txt  lightgbm_model_11.txt  lightgbm_model_13.txt  lightgbm_model_14.txt  lightgbm_model_15.txt  lightgbm_model_18.txt  lightgbm_model_19.txt  lightgbm_model_2.txt  lightgbm_model_21.txt  lightgbm_model_22.txt  lightgbm_model_25.txt  lightgbm_model_26.txt  lightgbm_model_27.txt  lightgbm_model_28.txt  lightgbm_model_3.txt  lightgbm_model_30.txt  lightgbm_model_31.txt  lightgbm_model_34.txt  lightgbm_model_36.txt  lightgbm_model_37.txt  lightgbm_model_38.txt  lightgbm_model_5.txt  lightgbm_model_6.txt  lightgbm_model_7.txt  lightgbm_model_8.txt
models/ru/tfidf/: tfidf_idf.csv
notebooks/: Lightgbm-text-classification.ipynb  fasttext-text-classification.ipynb
resources/data/category_en/: tg_output.txt
resources/data/category_ru/: tgcat-tester-output.txt
resources/libtgcat-r2/: CMakeLists.txt
resources/models/en/: lightgbm_model_0.txt  lightgbm_model_1.txt  lightgbm_model_13.txt  lightgbm_model_15.txt  lightgbm_model_16.txt  lightgbm_model_17.txt  lightgbm_model_18.txt  lightgbm_model_2.txt  lightgbm_model_20.txt  lightgbm_model_24.txt  lightgbm_model_25.txt  lightgbm_model_27.txt  lightgbm_model_33.txt  lightgbm_model_34.txt  lightgbm_model_35.txt  lightgbm_model_38.txt  lightgbm_model_4.txt  lightgbm_model_40.txt  lightgbm_model_5.txt  lightgbm_model_9.txt
resources/models/ru/: lightgbm_model_1.txt  lightgbm_model_10.txt  lightgbm_model_12.txt  lightgbm_model_16.txt  lightgbm_model_17.txt  lightgbm_model_20.txt  lightgbm_model_23.txt  lightgbm_model_24.txt  lightgbm_model_29.txt  lightgbm_model_32.txt  lightgbm_model_33.txt  (+5 more)
src/libtgcat/: CMakeLists.txt  cache.hpp  config.hpp  predictor.cpp  predictor.hpp  preprocessor.cpp  preprocessor.hpp  tg.hpp  tgcat.cpp  tgcat.hpp  utils.hpp
src/libtgcat/text_lightgbm/: CMakeLists.txt  application.cpp  application.h  main.cpp  predictor.h  tfidf_vectorizer.cc  tfidf_vectorizer.h
src/libtgcat/text_lightgbm/src/: application.h  main.cpp
src/text_lightgbm/: CMakeLists.txt  application.cpp  application.h  main.cpp  predictor.h
text_lightgbm/src/: application.cpp  predictor.h  tfidf_vectorizer.cc  tfidf_vectorizer.h
(+2 files in other folders)
